# RCXcloud

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
admin/: Cargo.toml
admin/src/: main.rs
application/: Cargo.toml
application/app/src/main/: AndroidManifest.xml
application/app/src/main/java/com/rcxcloud/core/: MainActivity.kt  SecureCore.kt
application/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/bridge/: api.rs  c.rs  error.rs  handle.rs  jni.rs  mod.rs  wasm.rs
core/src/bridge/typings/: secure-core.d.ts
core/src/crypto/: aad.rs  aes_gcm.rs  derive.rs  file.rs  kdf_argon2.rs  kem.rs  mod.rs  nonce.rs
core/src/device/: fingerprint.rs  mod.rs  registry.rs
core/src/integrity/: hash.rs  mod.rs  verify.rs
core/src/keystore/: master.rs  mod.rs  recovery.rs  session.rs
core/src/kill/: executor.rs  generate.rs  mod.rs  protocol.rs  replay.rs  strategy.rs
core/src/logging/: encrypted.rs  mod.rs
core/src/logging/events/: device.rs  kill.rs  mod.rs
core/src/media/: errors.rs  format.rs  limits.rs  mod.rs  output.rs
core/src/media/audio/: mod.rs
core/src/media/container/: demux.rs  mod.rs
core/src/media/decode/: audio.rs  video.rs
core/src/media/sanitize/: audio.rs  video.rs
core/src/media/subtitles/: decode.rs  mod.rs
core/src/memory/: guard.rs  mod.rs  zeroize.rs
core/src/policy/: capability.rs  enforcement.rs  mod.rs
core/tests/: security_proof.rs
docs/: SECURE_CORE_API_FREEZE.md  kill_protocol.md  security_checklist.md  termux-bootstrap.md
infrastructure/: Cargo.toml
plugins/: README.md
tooling/: lint_empty_files.sh
transport/: Cargo.toml
