# =========================
# RCXCloud — Application Layer
# Orchestration & Workflow
# =========================

# -------------------------
# Application Crate
# -------------------------

[package]
name = "rcxapp"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
# Depends on Secure Core for crypto + integrity
rcxcore = { path = "../core" }

# Async & utilities (safe defaults)
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"
