# =========================
# RCXCloud Secure Core
# =========================
[package]
name = "rcxcore"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

# =========================
# Dependencies (SECURITY-AUDITED)
# =========================

[dependencies]
# ---- Memory & Zeroization ----
zeroize = { version = "1.7", features = ["zeroize_derive", "alloc"] }

# ---- Crypto Primitives ----
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
sha2 = "0.10"
hmac = "0.12"      # ✅ Added (Required by nonce.rs)
hkdf = "0.12"
subtle = "2.5"

# ---- Key Derivation & Recovery ----
argon2 = { version = "0.5", features = ["zeroize", "alloc"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }

# ---- OS Randomness ----
rand_core = { version = "0.6", features = ["getrandom"] }

# ---- Platform Bindings ----
# Optional: Only enabled via "android" feature
jni = { version = "0.21", optional = true } # ✅ Added (Required by bridge)

# ---- Media Pipeline ----
# Required for media sanitization
ffmpeg-next = "6.0" # ✅ Added (Required by media/*)

# =========================
# Dev Dependencies (Tests)
# =========================
[dev-dependencies]
rand = "0.8"       # Used in stress tests
serial_test = "2.0"

# =========================
# Features
# =========================
[features]
default = []
android = ["jni"]
kill-admin = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
