# =========================
# RCXCloud Secure Core (LOCKED)
# =========================
#
# TRUST LEVEL: Secure Core (Trust Anchor)
#
# SECURITY PRINCIPLES:
# - Minimal dependency surface
# - Deterministic behavior
# - Zero-trust, fail-closed
# - No network / async / cloud crates
# - Feature-gated integration layers
# - Freeze-ready

[package]
name = "rcxcore"
version = "0.1.0"
edition = "2021"
publish = false

# -------------------------------------------------
# Crate Types
# -------------------------------------------------
# rlib   -> Internal Rust usage
# cdylib -> JNI / FFI / WASM boundary
[lib]
crate-type = ["rlib", "cdylib"]

# =========================
# Dependencies (SECURITY-AUDITED)
# =========================

[dependencies]
# ---- Memory & Zeroization (CRITICAL) ----
zeroize = { version = "1.7", features = ["zeroize_derive", "alloc"] }

# ---- Symmetric Crypto & Integrity (CRITICAL) ----
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
subtle = "2.5"

# ---- Key Derivation (CRITICAL) ----
argon2 = { version = "0.5", features = ["zeroize", "alloc"] }

# ---- Optional Crypto (Feature-Gated) ----
# Used ONLY for pairing / recovery / backup flows
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"], optional = true }

# ---- OS Randomness ----
# Used ONLY for:
# - Admin kill generation
# - WASM handle entropy
# - KEM flows
rand_core = { version = "0.6", features = ["getrandom"] }

# ---- Platform Bindings ----
# Enabled ONLY when targeting Android
jni = { version = "0.21", optional = true }

# ---- Media Pipeline (Hostile Input Handling) ----
# IMPORTANT:
# - Secure Core NEVER builds FFmpeg
# - Links against system / APK-provided FFmpeg
# - NO build.rs, NO ffmpeg-sys compilation
ffmpeg-next = { version = "6.0", default-features = false }

# =========================
# Dev Dependencies (TESTING ONLY)
# =========================
[dev-dependencies]
rand = "0.8"
serial_test = "2.0"

# =========================
# Feature Gates
# =========================

[features]
default = []

# Android JNI bridge
android = ["jni"]

# Key Encapsulation / Pairing / Backup
kem = ["x25519-dalek"]

# Admin-only kill blob generator
# MUST NEVER be enabled on target devices
kill-admin = []

# =========================
# Release Profile (SECURITY)
# =========================

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
opt-level = "z"