# =========================
# RCXCloud — Infrastructure Layer
# Cloud Providers & Storage
# =========================

# -------------------------
# Infrastructure Crate
# -------------------------

[package]
name = "rcxinfra"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
# Infrastructure NEVER decrypts
# It handles encrypted blobs only

thiserror = "1.0"
bytes = "1.6"
async-trait = "0.1"
