# =========================
# RCXCloud — Transport Layer
# Network & Pairing
# =========================

# -------------------------
# Transport Crate
# -------------------------

[package]
name = "rcxtransport"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
# Transport must NEVER see keys
# It only moves encrypted blobs

tokio = { version = "1.37", features = ["net", "rt-multi-thread"] }
bytes = "1.6"
thiserror = "1.0"
